# dotfiles

./: .chezmoiexternal.toml  .chezmoiignore  .envrc  .gitignore  .pre-commit-config.yaml  README.md  constants.nix  dependencies.json  devshell.nix  dot_aliasrc  dot_bashrc  dot_gitconfig  dot_vimrc  dot_zshrc  flake.nix  home.nix  lib.nix  run_after_00_install-programs.sh  run_after_01_check-dependencies.sh  run_after_install_programs.sh
.chezmoidata/: packages.yaml
.chezmoiexternals/: vim.yaml
.claude/: settings.json
.github/: LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yaml  dependabot.yml
checks/: default.nix
dev_shells/: default.kdl  default.nix
dotfiles/: constants.nix  default.nix
formatter/: default.nix
home_configurations/: default.nix
home_modules/: default.nix
lib/: default.nix
modules/: activate.nix  aerospace.nix  ai.nix  alacritty.nix  bat.nix  brave.nix  browsers.nix  checks.nix  code_directory.nix  colors.nix  configurations.nix  default.nix  devenv.nix  documentation.nix  eza.nix  file_system.nix  fonts.nix  formatting.nix  git.nix  git_hooks.nix  home_assistant.nix  home_configurations.nix  home_directory.nix  home_manager.nix  lib.nix  mcp.nix  metadata.nix  module_isolation.nix  music.nix  music_library.nix  nix.nix  notes.nix  obsidian.nix  overlay.nix  overlays.nix  packages.nix  presets.nix  screensavers.nix  scripts.nix  shell.nix  (+10 more)
nix/: checks.nix  devenv.nix  formatter.nix  overlays.nix  (+1 more)
programs/rust/crates/spotifyctl/: Cargo.toml  build.rs
programs/rust/crates/spotifyctl/src/: cli.rs  lib.rs  main.rs
(+536 files in other folders)
