[package]
name = "spotifyctl"
version = "0.0.0"
description = "Control Spotify client with CLI commands"

authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
mpris = "2.0.1"
thiserror = "1.0.47"

[build-dependencies]
clap = "4.3.23"
clap_complete = "4.3.2"
mpris = "2.0.1"
