[package]
name = "spotifyctl"
version = "0.0.0"
description = "Control Spotify client with CLI commands"

authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
mpris = "2.0.1"
thiserror = "1.0.56"

[build-dependencies]
clap = "4.4.16"
clap_complete = "4.4.6"
mpris = "2.0.1"
