[package]
name = "spotifyctl"
version = "0.0.0"
description = "Control Spotify client with CLI commands"

authors.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
mpris = "2.0.1"
thiserror = "1.0.58"

[build-dependencies]
clap = "4.5.1"
clap_complete = "4.5.1"
mpris = "2.0.1"
